--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dev_dependencies:
   shared_preferences: ^0.4.2
   http: ^0.12.0
   font_awesome_flutter: ^8.2.0
+  pin_entry_text_field : ^0.1.3
+  pin_view: ^1.0.1
 
 
   # For information on the generic Dart part of this file, see the
