--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dev_dependencies:
   font_awesome_flutter: ^8.2.0
   pin_entry_text_field : ^0.1.3
   pin_view: ^1.0.1
+  cupertino_icons: ^0.1.2
 
 
   # For information on the generic Dart part of this file, see the
